# albedo_flutter

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/albedo_dart_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: albedo_dart.podspec  albedo_flutter.podspec
ios/Classes/: albedo_dart.c
ios/Frameworks/albedo.xcframework/: Info.plist
lib/: albedo_dart.dart  albedo_dart_bindings_generated.dart
linux/: CMakeLists.txt
macos/: albedo_dart.podspec
macos/Classes/: albedo_dart.c  albedo_dart.h  libalbedo.dylib
src/: CMakeLists.txt  albedo_dart.h
windows/: CMakeLists.txt
